--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div class="container">
-    <div id="mySlides">
+    <div id="mySlides_1">
+    </div>
+    <div id="mySlides_2">
     </div>
     <footer>
 
