--- a/index.htm
+++ b/index.htm
@@ -8,9 +8,22 @@
   </head>
   <body>
     <div class="container">
-    <div id="mySlides_1">
+    <div >
+        <ul id="indexSlides_1">
+          <li href="#" class="logo"></li>
+
+            <a href="http://google.com">
+            <div class="logo_world">國立台北科技大學</div>
+            </a>
+
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
     </div>
-    <div id="mySlides_2">
+    <div id="indexSlides_2">
     </div>
     <footer>
 
