--- a/index.htm
+++ b/index.htm
@@ -10,17 +10,29 @@
     <div class="container">
     <div >
         <ul id="indexSlides_1">
-          <li href="#" class="logo"></li>
+          <a href="http://google.com" class="logo"></a>
 
             <a href="http://google.com">
-            <div class="logo_world">國立台北科技大學</div>
+            <div class="logo_world_ch">國立臺北科技大學國際事務處</div>
             </a>
-
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+            <a href="http://google.com">
+            <div class="logo_world_en">Office of International Affairs, Taipei Tech</div>
+            </a>
+            <a href="http://google.com">
+            <div class="world_about">關於我們</div>
+            </a>
+            <a href="http://google.com">
+          <div class="world_new">最新消息</div>
+        </a>
+        <a href="http://google.com">
+          <div class="world_guide">實用指南</div>
+        </a>
+        <a href="http://google.com">
+          <div class="world_axchange">交換學生</div>
+        </a>
+        <a href="http://google.com">
+          <div class="world_contact">聯絡我們</div>
+        </a>
         </ul>
     </div>
     <div id="indexSlides_2">
