--- a/index.htm
+++ b/index.htm
@@ -33,9 +33,24 @@
         <a href="http://google.com">
           <div class="world_contact">聯絡我們</div>
         </a>
+        <a href="http://google.com">
+          <div class="world_main_ch">國立台北科技大學國際事務處</div>
+        </a>
+        <a href="http://google.com">
+          <div class="world_main_en">Office of International Affairs,Taipei Tech</div>
+        </a>
         </ul>
     </div>
     <div id="indexSlides_2">
+      <a href="http://google.com" >
+        <div class="icon_new"></div>
+      </a>
+      <a href="http://google.com" >
+        <div class="new_1">最新</div>
+      </a>
+      <a href="http://google.com" >
+        <div class="new_2">消息</div>
+      </a>
     </div>
     <footer>
 
