--- a/index.htm
+++ b/index.htm
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="indexcss.css">
   </head>
   <body>
-    <div class="container">
+
     <div >
         <ul id="indexSlides_1">
+          <div class="container">
           <a href="http://google.com" class="logo"></a>
 
             <a href="http://google.com">
@@ -42,6 +43,7 @@
         </ul>
     </div>
     <div id="indexSlides_2">
+      <div class="container">
       <a href="http://google.com" >
         <div class="icon_new"></div>
       </a>
@@ -52,6 +54,7 @@
         <div class="new_2">消息</div>
       </a>
     </div>
+  </div>
     <footer>
 
     </footer>
