--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,8 @@
     <title>OIA</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="indexcss.css">
+    <link rel="stylesheet" href="indexcss.css" >
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
 
@@ -53,8 +54,65 @@
       <a href="http://google.com" >
         <div class="new_2">消息</div>
       </a>
+    </a>
+    <a href="http://google.com" >
+      <div class="date_1">2017-04-26 &nbsp;&nbsp;&nbsp;台港教育獎助學金</div>
+    </a>
+    <div class="hr_1"></div>
+    <a href="http://google.com" >
+      <div class="date_2">2017-04-23 &nbsp;&nbsp;&nbsp;西安交通大學研習營活動</div>
+    </a>
+      <div class="hr_2"></div>
+    <a href="http://google.com" >
+      <div class="date_3">2017-04-20 &nbsp;&nbsp;&nbsp;西安電子科技大學夏令營</div>
+    </a>
+      <div class="hr_3"></div>
+    <a href="http://google.com" >
+      <div class="date_4">2017-03-26 &nbsp;&nbsp;&nbsp;106學年度學士班僑生錄取名單</div>
+    </a>
+      <div class="hr_4"></div>
+    <a href="http://google.com" >
+      <div class="date_5">2016-12-26 &nbsp;&nbsp;&nbsp;105學年度外國學生春季班開放申請</div>
+    </a>
+      <div class="hr_5"></div>
+      <div class="container_panel">
+  <div class="panel_group">
+    <div class="panel panel-default">
+      <div  class="panel_heading_1">外籍生</div>
+      <a href="http://google.com" class="panel_body">外籍學生申請入學流程圖抵臺前必讀重要資訊</a>
     </div>
+
+    <div class="panel panel-primary">
+      <div class="panel_heading_2">僑生</div>
+      <a href="http://google.com" class="panel_body">單獨招生</a><br>
+      <a href="http://google.com" class="panel_body">流程圖海外聯招</a><br>
+      <a href="http://google.com" class="panel_body">流程圖本校僑生文宣</a><br>
+      <a href="http://google.com" class="panel_body">抵臺前必讀重要資訊</a>
+
+    </div>
+
+
+    <div class="panel panel-success">
+      <div class="panel_heading_3">陸生</div>
+      <a href="http://google.com" class="panel_body">大陸地區學生身分申請就讀</a><br>
+      <a href="http://google.com" class="panel_body">臺北科大碩博士課程</a>
+        </div>
+
+
+
+
+    <div class="panel panel-info">
+      <div class="panel_heading_4">獎學金</div>
+      <a href="http://google.com" class="panel_body">外籍生獎學金</a><br>
+      <a href="http://google.com" class="panel_body">僑生(含港澳生)獎學金</a><br>
+      <a href="http://google.com" class="panel_body">陸生獎學金</a><br>
+      <a href="http://google.com" class="panel_body">其他獎學金</a>
+    </div>
+
   </div>
+</div>
+    </div><!--container-->
+  </div><!--indexSlides_2-->
     <footer>
 
     </footer>
