--- a/index.htm
+++ b/index.htm
@@ -80,16 +80,16 @@
       <div class="panel_group">
 
 <!--123-->
-      <button  class="panel-heading_1" id="button"><span>外籍生</span></button>
-      <div id="wrapper" class="open">
-      <ul id="list">
+      <button class="panel-heading_1" id="button_1"><span><a href="http://www.computerhope.com" style="text-decoration: none" ><font color="white">外籍生</a></span></button>
+      <div id="wrapper_1" class="open_1">
+      <ul id="list_1">
       <a href="http://google.com" class="panel_body">外籍學生申請入學流程圖抵臺前必讀重要資訊</a>
       </ul>
       </div>
 
-      <button class="panel-heading_2" id="button"><span>僑生</span></button>
-      <div id="wrapper" class="open">
-      <ul id="list">
+      <button class="panel-heading_2" id="button_2"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">僑生</a></span></button>
+      <div id="wrapper_2" class="open_2">
+      <ul id="list_2">
       <a href="http://google.com" class="panel_body">單獨招生</a><br>
       <a href="http://google.com" class="panel_body">流程圖海外聯招</a><br>
       <a href="http://google.com" class="panel_body">流程圖本校僑生文宣</a><br>
@@ -97,17 +97,17 @@
     </ul>
       </div>
 
-      <button class="panel-heading_3" id="button"><span>陸生</span></button>
-        <div id="wrapper" class="open">
-            <ul id="list">
+      <button class="panel-heading_3" id="button_3"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">陸生</a></span></button>
+        <div id="wrapper_3" class="open_3">
+            <ul id="list_3">
       <a href="http://google.com" class="panel_body">大陸地區學生身分申請就讀</a><br>
       <a href="http://google.com" class="panel_body">臺北科大碩博士課程</a>
   </ul>
       </div>
 
-      <button class="panel-heading_4" id="button"><span>獎學金</span></button>
-  <div id="wrapper" class="open">
-        <ul id="list">
+      <button class="panel-heading_4" id="button_4"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">獎學金</a></span></button>
+  <div id="wrapper_4" class="open_4">
+        <ul id="list_4">
       <a href="http://google.com" class="panel_body">外籍生獎學金</a><br>
       <a href="http://google.com" class="panel_body">僑生(含港澳生)獎學金</a><br>
       <a href="http://google.com" class="panel_body">陸生獎學金</a><br>
@@ -125,5 +125,7 @@
     </div>
 
   </body>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
+      <script src="js/indexjs.js"></script>
 </html>
