--- a/index.htm
+++ b/index.htm
@@ -115,14 +115,26 @@
   </ul>
       </div>
 
-  </div>
-</div>
+  </div><!--panelgroup-->
+</div><!--container_panel-->
     </div><!--container-->
   </div><!--indexSlides_2-->
-    <footer>
+  <div id="indexSlides_3">
+    <div class="container">
 
-    </footer>
+    <div class="picture_1"></div>
+    <div class="picture_2"></div>
+  </div><!--container-->
     </div>
+    <div id="indexSlides_4">
+      <div class="container">
+    <div class="icon_bg1"></div>
+    <div class="icon_bg2"></div>
+    <div class="icon_bg3"></div>
+    <div class="icon_bg4"></div>
+  </div>
+    </div>
+
 
   </body>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
