--- a/index.htm
+++ b/index.htm
@@ -135,6 +135,12 @@
     <div class="icon_bg4"></div>
   </div>
     </div>
+    <footer id="foother_slides">
+      <div class="container">
+      <div class="footer_map"></div>
+      <div class="footer_bg_white"></div>
+      </div>
+    </footer>
 
 
   </body>
