--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <title>OIA</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="indexcss.css" >
+    <link rel="stylesheet" href="style.css" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script type="text/javascript" src="js/indexjs.js"></script>
   </head>
