--- a/index.htm
+++ b/index.htm
@@ -141,7 +141,7 @@
       <div class="footer_bg_white"></div>
       </div>
     </footer>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
         <script src="js/indexjs.js"></script>
 
