--- a/scholarships.htm
+++ b/scholarships.htm
@@ -4,7 +4,7 @@
     <title>Scholarships</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_SS.css" >
+    <link rel="stylesheet" href="css/style_SS.css" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script type="text/javascript" src="js/indexjs.js"></script>
   </head>
@@ -43,23 +43,17 @@
         </ul>
     </div>
     <div id="indexSlides_2">
-      <div class="container">
+      <div class="container_mini">
 
       </div><!--container-->
 
 
   </div><!--indexSlides_2-->
   <div id="indexSlides_3">
-    <div class="container">
-
-
+    <div class="container_large">
   </div><!--container-->
 </div><!--indexSlides_3-->
-    <div id="indexSlides_4">
-      <div class="container">
 
-  </div><!--container-->
-    </div><!--indexSlides_3-->
     <footer id="foother_slides">
       <div class="container">
       <div class="footer_map"></div>
