--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <title>OIA</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="css/style.css" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script type="text/javascript" src="js/indexjs.js"></script>
   </head>
@@ -122,23 +122,47 @@
   </div><!--indexSlides_2-->
   <div id="indexSlides_3">
     <div class="container">
-
     <div class="picture_1"></div>
     <div class="picture_2"></div>
+    <p class ="label_1" >為什麼</p><br>
+    <p class ="label_2" >選擇來到</p><br>
+    <p class ="label_3">北科大</p><br>
+    <p class ="sublabel_1" >· 專業領域有傑出成就</p><br>
+    <p class ="sublabel_2" >· 實務研究型大學</p><br>
+    <p class ="sublabel_3" >· 企業最愛大學</p><br>
+    <p class ="sublabel_4" >· 世界綠能大學排名</p><br>
   </div><!--container-->
     </div>
     <div id="indexSlides_4">
       <div class="container">
-    <div class="icon_bg1"></div>
-    <div class="icon_bg2"></div>
-    <div class="icon_bg3"></div>
-    <div class="icon_bg4"></div>
+        <a href="http://google.com" >
+            <div class="icon_bg2"></div>
+            <div class="icon_label_2">系所資訊</div>
+        </a>
+        <a href="http://google.com" >
+            <div class="icon_bg3"></div>
+            <div class="icon_label_3">住宿資訊</div>
+        </a>
+        <a href="http://google.com" >
+          <div class="icon_bg4"></div>
+          <div class="icon_label_4">簽證資訊</div>
+        </a>
+        <a href="http://google.com" >
+          <div class="icon_bg1"></div>
+          <div class="icon_label_1">招生資訊</div>
+        </a>
   </div>
     </div>
     <footer id="foother_slides">
       <div class="container">
       <div class="footer_map"></div>
       <div class="footer_bg_white"></div>
+      <p class ="footer_label" >國立臺北科技大學國際事務處<br>
+                               10608 台北市大安區忠孝東路三段一號（第二教學大樓一樓）<br>
+                               TEL：886-2-2771-2171#6500<br>
+                               FAX：886-2-8773-1879<br>
+                               E-mail：intstudy@ntut.edu.tw
+      </p>
       </div>
     </footer>
 
