--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
             <a href="http://google.com">
             <div class="world_about">關於我們</div>
             </a>
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/news.htm">
           <div class="world_new">最新消息</div>
         </a>
         <a href="http://google.com">
