--- a/OCS.htm
+++ b/OCS.htm
@@ -43,9 +43,22 @@
         </ul>
     </div>
     <div id="indexSlides_2">
-      <div class="container">
-
-      </div><!--container-->
+      <div class="container_mini">
+        <div class="home_logo"></div>
+        <div class="link_SS">
+        <a  href="https://tsejunzhen.github.io/Project_OIA/index.htm" style="text-decoration: none"><font color="black">首頁 <a href="#" style="text-decoration: none">>
+        </a>
+        <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm" style="text-decoration: none"><font color="black">實用指南 <a href="#" style="text-decoration: none">>
+        </a>
+        <a href="https://tsejunzhen.github.io/Project_OIA/OCS.htm" style="text-decoration: none"><font color="black">招生 <a href="#" style="text-decoration: none">>
+          </a>
+          <a href="https://tsejunzhen.github.io/Project_OIA/OCS.htm" style="text-decoration: none"><font color="black">僑生招生
+        </a>
+      </a>
+    </a>
+  </a>
+      </div>
+    </div><!--container_mini-->
 
 
   </div><!--indexSlides_2-->
