--- a/about.htm
+++ b/about.htm
@@ -43,8 +43,11 @@
         </ul>
     </div>
     <div id="indexSlides_2">
-      <div class="container">
-
+      <div class="container_mini">
+        <div class="home_logo"></div>
+        <div class="link_SS">
+        <a  href="https://tsejunzhen.github.io/Project_OIA/index.htm" style="text-decoration: none"><font color="black">Home <a href="#" style="text-decoration: none">></a> <a href="https://tsejunzhen.github.io/Project_OIA/about.htm" style="text-decoration: none"><font color="black">About Us</a></a></a>
+      </div>
       </div><!--container-->
 
 
