--- a/exchange.htm
+++ b/exchange.htm
@@ -43,10 +43,16 @@
         </ul>
     </div>
     <div id="indexSlides_2">
-      <div class="container">
-
-      </div><!--container-->
-
+      <div class="container_mini">
+        <div class="home_logo"></div>
+        <div class="link_SS">
+        <a  href="https://tsejunzhen.github.io/Project_OIA/index.htm" style="text-decoration: none"><font color="black">Home <a href="#" style="text-decoration: none">>
+        </a>
+        <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm" style="text-decoration: none"><font color="black">Student Exchange
+        </a>
+      </a>
+      </div>
+    </div><!--container_mini-->
 
   </div><!--indexSlides_2-->
   <div id="indexSlides_3">
