--- a/scholarships.htm
+++ b/scholarships.htm
@@ -44,8 +44,18 @@
     </div>
     <div id="indexSlides_2">
       <div class="container_mini">
-
-      </div><!--container-->
+        <div class="home_logo"></div>
+        <div class="link_SS">
+        <a  href="https://tsejunzhen.github.io/Project_OIA/index.htm" style="text-decoration: none"><font color="black">Home <a href="#" style="text-decoration: none">>
+        </a>
+        <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm" style="text-decoration: none"><font color="black">Guide <a href="#" style="text-decoration: none">>
+        </a>
+        <a href="https://tsejunzhen.github.io/Project_OIA/scholarships.htm" style="text-decoration: none"><font color="black">Scholarships
+        </a>
+      </a>
+    </a>
+      </div>
+    </div><!--container_mini-->
 
 
   </div><!--indexSlides_2-->
