--- a/IS.htm
+++ b/IS.htm
@@ -42,11 +42,24 @@
         </a>
         </ul>
     </div>
+    Home > Guide > Admission > International Student
     <div id="indexSlides_2">
-      <div class="container">
-
-      </div><!--container-->
-
+      <div class="container_mini">
+        <div class="home_logo"></div>
+        <div class="link_SS">
+        <a  href="https://tsejunzhen.github.io/Project_OIA/index.htm" style="text-decoration: none"><font color="black">Home <a href="#" style="text-decoration: none">>
+        </a>
+        <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm" style="text-decoration: none"><font color="black">Guide <a href="#" style="text-decoration: none">>
+        </a>
+        <a href="https://tsejunzhen.github.io/Project_OIA/IS.htm" style="text-decoration: none"><font color="black">Admission <a href="#" style="text-decoration: none">>
+        </a>
+        <a href="https://tsejunzhen.github.io/Project_OIA/IS.htm" style="text-decoration: none"><font color="black">International Student
+      </a>
+        </a>
+    </a>
+      </a>
+      </div>
+    </div><!--container_mini-->
 
   </div><!--indexSlides_2-->
   <div id="indexSlides_3">
