--- a/MCS.htm
+++ b/MCS.htm
@@ -43,11 +43,20 @@
         </ul>
     </div>
     <div id="indexSlides_2">
-      <div class="container">
-
-      </div><!--container-->
-
-
+      <div class="container_mini">
+        <div class="home_logo"></div>
+        <div class="link_SS">
+        <a  href="https://tsejunzhen.github.io/Project_OIA/index.htm" style="text-decoration: none"><font color="black">首頁 <a href="#" style="text-decoration: none">>
+        </a>
+        <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm" style="text-decoration: none"><font color="black">實用指南 <a href="#" style="text-decoration: none">>
+        </a>
+        <a href="https://tsejunzhen.github.io/Project_OIA/MCS.htm" style="text-decoration: none"><font color="black">招生<a href="#" style="text-decoration: none">>
+        </a>
+          <a href="https://tsejunzhen.github.io/Project_OIA/MCS.htm" style="text-decoration: none"><font color="black">陸生招生
+      </a>
+    </a>
+      </div>
+    </div><!--container_mini-->
   </div><!--indexSlides_2-->
   <div id="indexSlides_3">
     <div class="container">
