--- a/news.htm
+++ b/news.htm
@@ -43,9 +43,17 @@
         </ul>
     </div>
     <div id="indexSlides_2">
-      <div class="container">
-
-      </div><!--container-->
+      <div class="container_mini">
+        <div class="home_logo"></div>
+        <div class="link_SS">
+        <a  href="https://tsejunzhen.github.io/Project_OIA/index.htm" style="text-decoration: none"><font color="black">Home <a href="#" style="text-decoration: none">>
+        </a>
+        <a href="https://tsejunzhen.github.io/Project_OIA/news.htm" style="text-decoration: none"><font color="black">News 
+        </a>
+      </a>
+    </a>
+      </div>
+    </div><!--container_mini-->
 
 
   </div><!--indexSlides_2-->
