--- a/index_en.htm
+++ b/index_en.htm
@@ -132,7 +132,9 @@
     <div class="picture_1"></div>
     <div class="picture_2"></div>
     <p class ="label_1" >WHY YOU SHOULD </p><br>
+    <p class ="label_2_hover" > STUDY AT</p>
     <p class ="label_2" > STUDY AT</p><br>
+    <p class ="label_3_hover">TAIPEI TECH</p>
     <p class ="label_3">TAIPEI TECH</p><br>
     <p class ="sublabel_1" >· university with honored traditions and widespread acclaim.</p><br>
     <p class ="sublabel_2" >· Practical research university</p><br>
