--- a/guide.htm
+++ b/guide.htm
@@ -35,10 +35,12 @@
           <div class="world_contact">聯絡我們</div>
         </a>
         <a href="http://google.com">
-          <div class="world_main_ch">國立台北科技大學國際事務處</div>
+          <div class="world_main_ch">G U I D E</div>
+            <p class="world_main_ch_p">G U I D E</p>
         </a>
         <a href="http://google.com">
-          <div class="world_main_en">Office of International Affairs,Taipei Tech</div>
+          <div class="world_main_en">實用指南</div>
+          <p class="world_main_en_p">實用指南</p>
         </a>
         </ul>
     </div>
@@ -57,17 +59,26 @@
   </div><!--indexSlides_2-->
   <div id="indexSlides_3">
     <div class="container">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
 
 
   </div><!--container-->
 </div><!--indexSlides_3-->
 
-    <footer id="foother_slides">
-      <div class="container">
-      <div class="footer_map"></div>
-      <div class="footer_bg_white"></div>
-      </div><!--container-->
-    </footer><!--indexSlides_3-->
+<footer id="foother_slides">
+  <div class="container">
+  <div class="footer_map"></div>
+  <div class="footer_bg_white"></div>
+  <p class ="footer_label" >國立臺北科技大學國際事務處<br>
+                           10608 台北市大安區忠孝東路三段一號（第二教學大樓一樓）<br>
+                           TEL：886-2-2771-2171#6500<br>
+                           FAX：886-2-8773-1879<br>
+                           E-mail：intstudy@ntut.edu.tw
+  </p>
+  </div>
+</footer>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
         <script src="js/indexjs.js"></script>
