--- a/scholarships.htm
+++ b/scholarships.htm
@@ -61,6 +61,92 @@
   </div><!--indexSlides_2-->
   <div id="indexSlides_3">
     <div class="container_large">
+      <div class="container_panel">
+      <div class="panel_group">
+
+<!--123-->
+<div class="text">外籍生獎學金</div><br>
+      <button class="panel-heading_1" id="button_1"><span><a href="http://www.computerhope.com" style="text-decoration: none" ><font color="white">臺灣獎學金</a></span></button>
+      <div id="wrapper_1" class="open_1">
+      <ul id="list_1">
+        <div class="panel_body">·單獨招生</div>
+        <div class="panel_body">·流程圖海外聯招</div>
+        <div class="panel_body">·流程圖海外聯招</div>
+        <div class="panel_body">·流程圖海外聯招</div>
+      </div>
+
+      <button class="panel-heading_2" id="button_2"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">國立臺北科技大學外國籍學生獎學金</a></span></button>
+      <div id="wrapper_2" class="open_2">
+      <ul id="list_2">
+      <div class="panel_body">·單獨招生</div>
+      <div class="panel_body">·流程圖海外聯招</div>
+      <div class="panel_body">·流程圖海外聯招</div>
+      <div class="panel_body">·流程圖海外聯招</div>
+    </ul>
+      </div>
+
+      <button class="panel-heading_3" id="button_3"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">陸生</a></span></button>
+        <div id="wrapper_3" class="open_3">
+            <ul id="list_3">
+              <div class="panel_body">·單獨招生</div>
+              <div class="panel_body">·流程圖海外聯招</div>
+              <div class="panel_body">·流程圖海外聯招</div>
+              <div class="panel_body">·流程圖海外聯招</div>
+  </ul>
+      </div>
+      <br><br><br>
+<div class="text">僑生(含港澳生)獎學金</div><br>
+      <button class="panel-heading_4" id="button_4"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">獎學金</a></span></button>
+  <div id="wrapper_4" class="open_4">
+        <ul id="list_4">
+          <div class="panel_body">·單獨招生</div>
+          <div class="panel_body">·流程圖海外聯招</div>
+          <div class="panel_body">·流程圖海外聯招</div>
+          <div class="panel_body">·流程圖海外聯招</div>
+  </ul>
+      </div>
+      <button class="panel-heading_5" id="button_5"><span><a href="http://www.computerhope.com" style="text-decoration: none" ><font color="white">國立臺北科技大學大陸地區優秀學生獎學金要點</a></span></button>
+      <div id="wrapper_5" class="open_5">
+      <ul id="list_5">
+        <div class="panel_body">·單獨招生</div>
+        <div class="panel_body">·流程圖海外聯招</div>
+        <div class="panel_body">·流程圖海外聯招</div>
+        <div class="panel_body">·流程圖海外聯招</div>
+      </div>
+      <br><br><br>
+<div class="text" >陸生獎學金</div><br>
+      <button class="panel-heading_6" id="button_6"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">國立臺北科技大學外國籍學生獎學金</a></span></button>
+      <div id="wrapper_6" class="open_6">
+      <ul id="list_6">
+      <div class="panel_body">·單獨招生</div>
+      <div class="panel_body">·流程圖海外聯招</div>
+      <div class="panel_body">·流程圖海外聯招</div>
+      <div class="panel_body">·流程圖海外聯招</div>
+    </ul>
+      </div>
+
+      <button class="panel-heading_7" id="button_7"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">陸生</a></span></button>
+        <div id="wrapper_7" class="open_7">
+            <ul id="list_7">
+              <div class="panel_body">·單獨招生</div>
+              <div class="panel_body">·流程圖海外聯招</div>
+              <div class="panel_body">·流程圖海外聯招</div>
+              <div class="panel_body">·流程圖海外聯招</div>
+  </ul>
+      </div>
+      <br><br><br>
+<div class="text">其他獎學金</div><br>
+      <button class="panel-heading_8" id="button_8"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">臺灣獎學金</a></span></button>
+  <div id="wrapper_8" class="open_8">
+        <ul id="list_8">
+          <div class="panel_body">·單獨招生</div>
+          <div class="panel_body">·流程圖海外聯招</div>
+          <div class="panel_body">·流程圖海外聯招</div>
+          <div class="panel_body">·流程圖海外聯招</div>
+  </ul>
+      </div>
+  </div><!--panelgroup-->
+</div><!--container_panel-->
   </div><!--container-->
 </div><!--indexSlides_3-->
 
