--- a/OCS.htm
+++ b/OCS.htm
@@ -63,9 +63,78 @@
 
   </div><!--indexSlides_2-->
   <div id="indexSlides_3">
-    <div class="container">
+    <div class="container_large">
+      <div class="container_panel">
+      <div class="panel_group">
 
+<!--123-->
+<div class="text">外籍生獎學金</div><br>
+      <button class="panel-heading_1" id="button_1"><span><a href="http://www.computerhope.com" style="text-decoration: none" ><font color="white">臺灣獎學金</a></span></button>
+      <div id="wrapper_1" class="open_1">
+      <ul id="list_1">
+        <div class="panel_body">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·單獨招生</div>
+        <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·流程圖海外聯招</div>
+        </div>
 
+      <button class="panel-heading_2" id="button_2"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">國立臺北科技大學外國籍學生獎學金</a></span></button>
+      <div id="wrapper_2" class="open_2">
+      <ul id="list_2">
+        <div class="panel_body">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·單獨招生</div>
+        <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body">·流程圖海外聯招</div>
+    </ul>
+      </div>
+
+      <button class="panel-heading_3" id="button_3"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">陸生</a></span></button>
+        <div id="wrapper_3" class="open_3">
+            <ul id="list_3">
+              <div class="panel_body">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
+              <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+              <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+              <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+              <div class="panel_body">·單獨招生</div>
+              <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+              <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+              <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+              <div class="panel_body">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
+              <div class="panel_body">·流程圖海外聯招</div>
+  </ul>
+      </div>
+      <br><br><br>
+<div class="text">僑生(含港澳生)獎學金</div><br>
+      <button class="panel-heading_4" id="button_4"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">獎學金</a></span></button>
+  <div id="wrapper_4" class="open_4">
+        <ul id="list_4">
+          <div class="panel_body">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
+          <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+          <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+          <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+          <div class="panel_body">·單獨招生</div>
+          <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+          <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+          <div class="panel_body">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
+          <div class="panel_body">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
+          <div class="panel_body">·流程圖海外聯招</div>
+  </ul>
+      </div>
+
+  </div><!--panelgroup-->
+</div><!--container_panel-->
   </div><!--container-->
 </div><!--indexSlides_3-->
 
