--- a/guide.htm
+++ b/guide.htm
@@ -59,9 +59,63 @@
   </div><!--indexSlides_2-->
   <div id="indexSlides_3">
     <div class="container">
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+
+    <a href="https://tsejunzhen.github.io/Project_OIA/OCS.htm">
+    <div class="box01">
+        <div class="pic01"></div>
+        <p class="label_01">ADMISSION</p>
+    </a>
+            <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
+              <div class="box02">
+                <div class="pic02"></div>
+                <p class="label_02">FRESHMAN</p>
+            </a>
+                  <a href="https://www.ntut.edu.tw/ezfiles/21/1021/img/1304/newBig01-13-2014.jpg">
+                    <div class="box03">
+                      <div class="pic03"></div>
+                      <p class="label_03">CAMPUS</p>
+                  </a>
+                    </div>
+              </div>
+      </div>
+
+<a href="https://tsejunzhen.github.io/Project_OIA/scholarships.htm">
+    <div class="box11">
+        <div class="pic11"></div>
+        <p class="label_11">SCHOLARSHIPS</p>
+      </a>
+        <a href="https://nportal.ntut.edu.tw/index.do?thetime=1412421457275">
+          <div class="box12">
+            <div class="pic12"></div>
+            <p class="label_12">STUDENT<br>PORTAL</p>
+        </a>
+          <a href="https://webmail.ntut.edu.tw/index_p.html#1">
+            <div class="box13">
+              <div class="pic13"></div>
+              <p class="label_13">WEBMAIL</p>
+          </a>
+            </div>
+        </div>
+    </div>
+
+  <a href="http://combiboilersleeds.com/images/emergency/emergency-0.jpg">
+    <div class="box21">
+        <div class="pic21"></div>
+        <p class="label_21">EMERGENCY <br>CONTACT</p>
+  </a>
+      <a href="http://www.cwb.gov.tw/m/f/taiwan/63.htm">
+        <div class="box22">
+          <div class="pic22"></div>
+          <p class="label_22">WEATHER</p>
+      </a>
+            <a href="http://www.boca.gov.tw/ct.asp?xItem=30&CtNode=735&mp=1">
+              <div class="box23">
+                <div class="pic23"></div>
+                <p class="label_23">VISA</p>
+            </a>
+              </div>
+        </div>
+    </div>
 
 
   </div><!--container-->
