--- a/guide.htm
+++ b/guide.htm
@@ -11,34 +11,34 @@
   <body>
         <ul id="indexSlides_1">
           <div class="container">
-          <a href="http://google.com" class="logo"></a>
+          <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="logo"></a>
 
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
             <div class="logo_world_ch">國立臺北科技大學國際事務處</div>
             </a>
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
             <div class="logo_world_en">Office of International Affairs, Taipei Tech</div>
             </a>
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/about.htm">
             <div class="world_about">關於我們</div>
             </a>
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/news.htm">
           <div class="world_new">最新消息</div>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
           <div class="world_guide">實用指南</div>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
           <div class="world_axchange">交換學生</div>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/contact.htm">
           <div class="world_contact">聯絡我們</div>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
           <div class="world_main_ch">G U I D E</div>
             <p class="world_main_ch_p">G U I D E</p>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
           <div class="world_main_en">實用指南</div>
           <p class="world_main_en_p">實用指南</p>
         </a>
